# x-host

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
scripts/: export_hosts_candidate.py  hosts_block_probe.py  test_export_hosts_candidate.py  test_hosts_block_probe.py
src/: main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup_service.rs  commands.rs  diagnostic_log.rs  dns_service.rs  elevation.rs  hosts_parser.rs  hosts_service.rs  lib.rs  main.rs  models.rs
