[package]
name = "x-hosts"
version = "0.1.0"
description = "Cross-platform desktop hosts file editor built with Tauri"
authors = ["neo8818 <neo8818@users.noreply.github.com>"]
license = "MIT"
edition = "2021"

[lib]
name = "x_hosts_core"
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.0.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }
dirs = "5.0"
encoding_rs = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "rustls-tls"] }

[dev-dependencies]
tempfile = "3.13"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
